<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white_background"
    tools:context=".SelectLevelPage">

    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/blue_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/select_level"
        android:textColor="@color/blue_app"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_a1"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:text="@string/a1_level"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_a2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_a2"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/a2_level"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_a1" />

    <Button
        android:id="@+id/button_b1"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/b1_level"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_a2" />

    <Button
        android:id="@+id/button_b2"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/b2_level"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_b1" />

    <Button
        android:id="@+id/button_c1"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/c1_level"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/text_check_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_b2" />

    <TextView
        android:id="@+id/text_check_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/yellow_button_outline_bg"
        android:padding="12dp"
        android:text="@string/check_level"
        android:textColor="@color/blue_app"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>